--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -119,6 +119,12 @@
     .enter-godai-image {
         max-width: 200px;
     }
+
+    .section {
+        overflow: auto;
+    }
+
+
 }
 
 @media (max-width: 480px) {
@@ -133,5 +139,9 @@
 
     .enter-godai-image {
         max-width: 150px;
+    }
+
+    .section {
+        overflow: auto;
     }
 }
